--- a/fullstack/src/main/resources/application.properties
+++ b/fullstack/src/main/resources/application.properties
@@ -1,1 +1,13 @@
+spring.jpa.show-sql=true
 
+spring.datasource.url=jdbc:mysql://us-cdbr-iron-east-02.cleardb.net/heroku_45b60fa03ee8080?reconnect=true
+spring.datasource.username=b977fa7d05c8fa
+spring.datasource.password=c2ea4bb0
+
+
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
+
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
+spring.jpa.hibernate.ddl-auto=update
+
+server.port=${PORT:8080}
